test/expected/declare_fcf.out
declare f as friend constant function
             ^
14: error: "friend": unsupported keyword in C
